# pocket-drive

./: Cargo.toml  patterns.json
src/: lib.rs  main.rs
src/db_listener/: db.rs
src/event_listener/: listener.rs
src/event_parser/: parser.rs  types.rs
src/file_hasher/: hasher.rs
src/file_uploader/: file_upload.rs
src/file_watcher/: mod.rs  types.rs  watcher.rs
