[package]
name = "pocket-drive"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde_json = "1"
notify = "8.1.0"
notify-debouncer-full = "0.5.0"
file-hashing = "0.1.2"
blake2 = "0.10.6"
sqlite = "0.37.0"
walkdir = "2.5.0"
rayon = "1.11.0"
indicatif = "0.18.3"
